--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>I Wayan Sudasarsa Biografi</title>
+        <title>I Wayan Sudarsa Biografi</title>
         <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="./assets/css/aos.css">
         <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
@@ -299,7 +299,7 @@
                     </div>
 
                     <div class="col-lg-8">
-                        <form action="https://formsubmit.co/theodarmawan43@smp.belajar.id" class="row g-lg-3 gy-3">
+                        <form method="post" action="https://formsubmit.co/theodarmawan43@smp.belajar.id" class="row g-lg-3 gy-3">
                             <div class="form-group col-md-6" data-aos="fade-up" data-aos-delay="300">
                                 <input type="text" name="" id="" class="form-control" placeholder="Enter Your Name">
                             </div>
