--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     </div>
 
                     <div class="col-lg-8">
-                        <form method="post" action="https://formsubmit.co/theodarmawan43@smp.belajar.id" class="row g-lg-3 gy-3">
+                        <form method="post" action="a2a938ecb92b928d3445fc05abad5e30"  class="row g-lg-3 gy-3">
                             <div class="form-group col-md-6" data-aos="fade-up" data-aos-delay="300">
                                 <input type="text" name="" id="" class="form-control" placeholder="Enter Your Name">
                             </div>
